--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "deploy": "next build && gh-pages -d out -b gh-pages -r https://github.com/YOUR_USERNAME/cover-letter-ai.git"
   },
   "dependencies": {
