--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --no-lint",
-    "deploy": "next build && gh-pages -d out -b gh-pages -r https://github.com/YOUR_USERNAME/cover-letter-ai.git"
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
