--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@tailwindcss/postcss": "^4.1.10",
+    "autoprefixer": "^10.4.21",
     "canvas": "^3.1.1",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
