--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build --no-lint",
-    "start": "next start"
+    "build": "next build && next export",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out",
+    "homepage": "https://perkovicluka.github.io/cover-letter-ai"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "gh-pages": "^6.3.0",
     "typescript": "^5"
   }
 }
