--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cover-letter-ai",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://perkovicluka.github.io/cover-letter-ai",
   "scripts": {
     "build": "next build && next export",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out",
-    "homepage": "https://perkovicluka.github.io/cover-letter-ai"
+    "deploy": "npm run build && npm run export && gh-pages -d out"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
