--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "cover-letter-ai",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://perkovicluka.github.io/cover-letter-ai",
   "scripts": {
-    "build": "next build && next export",
-    "predeploy": "npm run build",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
